# MyoMod-DPU

./: .cproject  .default_mex  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakePresets.json  DPU JLink Debug.launch  DPU.mex  HyperRamBitAssignment.ods  README.md  architecture.drawio  arm-none-eabi-gcc.cmake  braceletMainboard.mex  config.json  debugProject.jdebug  debugProjectContainer.jdebug  runIde.sh  vatVoltageToADC.ods
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  gdbinit
CMSIS/DSP/Source/: CMakeLists.txt
SEGGER_RTT/: CMakeLists.txt  SEGGER_RTT.cpp  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.cpp
board/: CMakeLists.txt  RTE_Device.h  board.h  clock_config.c  clock_config.h  dcd.c  peripherals.c  peripherals.c.bak  peripherals.h  peripherals.h.bak  pin_mux.c  pin_mux.c.bak  pin_mux.h  pin_mux.h.bak
component/: CMakeLists.txt
component/gpio/: fsl_adapter_igpio.c
component/mem_manager/: fsl_component_mem_manager.h  fsl_component_mem_manager_light.c
component/messaging/: fsl_component_messaging.c  fsl_component_messaging.h
component/serial_manager/: fsl_component_serial_manager.c  fsl_component_serial_manager.h
component/time_stamp/: fsl_adapter_gpt_time_stamp.c  fsl_adapter_pit_time_stamp.c  fsl_adapter_time_stamp.h
component/timer/: fsl_adapter_pit.c
component/uart/: fsl_adapter_lpuart.c
device/: MIMXRT1062.h
documentation/: structure.drawio
drivers/: CMakeLists.txt  fsl_csi.c  fsl_enet.c  fsl_enet.h  fsl_lpi2c_cmsis.c  fsl_lpspi.c  fsl_lpspi.h  fsl_lpspi_edma.c  fsl_lpspi_edma.h  fsl_lpuart_cmsis.c  fsl_pit.c  fsl_sai.c  fsl_semc.c  fsl_trng.c  fsl_trng.h
ld/: DPU_Debug.ld  DPU_Debug_library.ld  DPU_Debug_memory.ld
nor_flash/: fsl_flexspi_nor_flash.c
source/: CMakeLists.txt  DPU.cpp  DPU.cpp_bak  RuntimeHandler.cpp  RuntimeHandler.h  UserInterface.cpp  UserInterface.h  comInterface.cpp  comInterface.h
source/algorithms/: AnalysisAlgorithm.cpp  AnalysisAlgorithm.h  AnalysisAlgorithm.h_bak  DirectControl.cpp  DirectControl.h  FftAlgorithm.cpp  FftAlgorithm.cpp_bak  FftAlgorithm.h  GestureEstimator.cpp  GestureEstimator.h  LinearRegression.cpp  LinearRegression.h  NopAlgorithm.cpp  NopAlgorithm.cpp_bak  NopAlgorithm.h  NopAlgorithm.h_bak  PassAlgorithm.cpp  PassAlgorithm.h  StatisticTracker.cpp  StatisticTracker.h  StatisticTracker.h_bak  adaptiveEmgFiltNode.cpp  adaptiveEmgFiltNode.h  algorithmicNode.h  base64.cpp  base64.h  config.h  counterNode.h  handAnimationNode.h  linearFuncNode.h  logNode.h  mvcSpectrum.h  testAlgorithm.h
source/algorithms/outdated/: AnalysisAlgorithm.cpp_bak  DirectControl.h_bak  LinearRegression.cpp_bak  LinearRegression.h_bak  PassAlgorithm.cpp_bak  StatisticTracker.cpp_bak
source/commonClasses/: Status.h  charArray.h
source/communication/: ComInterface.cpp  ComInterface.cpp_bak  ComInterface.h  ComInterface.h_bak  PDSChannel.h  PeripheralHandler.cpp  PeripheralHandler.h  ProcessDataStream.cpp  ProcessDataStream.h
source/configurations/: Configuration.cpp  Configuration.h  ConfigurationManager.cpp  ConfigurationManager.h  config.json  configParser.cpp  configParser.h  node.cpp  node.h  port.h  test.cpp_bak
source/devices/: BLEBridge.cpp  BLEBridge.h  BarDisplay.cpp  BarDisplay.h  BtSink.cpp  BtSink.h  BtSink.h_bak  BtSink_reg.h_bak  Device.cpp  Device.h  EMGSensor6Chn.cpp  EMGSensor6Chn.h  EmgElectrode6Chn.cpp  EmgElectrode6Chn.h  EmgElectrode6Chn_reg.h  ServoHand.cpp  ServoHand.h  commonRegisterDef.h  deviceNode.cpp  deviceNode.h
source/devices/outdated/: BtSink.cpp_bak
source/embeddedDevices/: device.cpp_sample  device.h_sample  embeddedDeviceNode.cpp  embeddedDeviceNode.h  embeddedDevicesManager.cpp  embeddedDevicesManager.h  embeddedEMG.cpp  embeddedEMG.h  embeddedIMU.cpp  embeddedIMU.h  embeddedLED.cpp  embeddedLED.h
source/embeddedDevices/max11254/: CMakeLists.txt  max11254.cpp  max11254.h  max11254_hal.cpp  max11254_hal.h
source/hardware/: HyperRamLUT.c  dpu_gpio.cpp  dpu_gpio.h
source/myoModCommon/: CMakeLists.txt  MemoryRegion.h  charArray.h  myomodCommon.c  myomodCommon.h
source/structure/: CMakeLists.txt  CMakePresets.json  configParser.cpp  configParser.h  node.cpp  node.h  nodeFactory.cpp  nodeFactory.h  structure.drawio  test.cpp
source/structure/configData/: config.json  config.toml  configmin.json
source/ui/: button.h
utilities/: CMakeLists.txt  fsl_str.c
xip/: CMakeLists.txt_bak  evkcmimxrt1060_flexspi_nor_config.c  evkcmimxrt1060_flexspi_nor_config.h
